bk_ida/gccida/c3/dump_def_use_chain
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_def_use_chain/src/regrename.c:1511:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)chains->loc)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_def_use_chain/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_def_use_chain/src/regrename.c:1512:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)chains->loc)] == MODE_COMPLEX_FLOAT; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_def_use_chain/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_def_use_chain/src/obj/regrename.o] Error 1
